--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <!-- Add first 3D box that will appear on the marker -->
             <a-box position="0 0.5 0" material="color: red;"></a-box>
             
-            <!-- Add second 3D box 10 feet (approx. 3.048 meters) away straight ahead -->
-            <a-box position="0 0.5 -3.048" material="color: blue;"></a-box>
+            <!-- Add second 3D box right next to the first box -->
+            <a-box position="1 0.5 0" material="color: blue;"></a-box>
         </a-marker>
         
         <!-- Add a camera -->
