--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AR.js Project</title>
     <!-- Import the AR.js library -->
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script src="script.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
     <!-- AR.js scene -->
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
+    <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
         <!-- Create a marker -->
         <a-marker preset="hiro" id="hiro-marker">
-            <!-- Boxes will be added via JavaScript -->
+            <!-- Temporary boxes that will be visible when marker is detected -->
+            <a-box position="0 0.5 0" material="color: red;" scale="1 1 1" class="marker-box"></a-box>
+            <a-box position="1 0.5 0" material="color: blue;" scale="1 1 1" class="marker-box"></a-box>
+            <a-box position="-1 0.5 0" material="color: green;" scale="1 1 1" class="marker-box"></a-box>
         </a-marker>
         
-        <!-- Scene entity to hold persistent objects -->
-        <a-entity id="persistent-objects"></a-entity>
-        
-        <!-- Add a camera -->
+        <!-- Camera -->
         <a-entity camera></a-entity>
     </a-scene>
 </body>
